# IoT

./: graph.js  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: App.js  index.css
client/src/context/: AuthContext.js
client/src/hooks/: auth.hooks.js  http.hook.js
client/src/pages/: AuthPage.js  Info.js  routes.js
config/: default.json
server/: auth_routes.js
server/graph/: CMakeLists.txt
server/graph/graph_algo/: connected_components.hpp  domain.hpp  graph.hpp  graph_painter.hpp  graph_reader.hpp  main.cpp
server/graph/graph_algo/json/: json.cpp  json.hpp
server/graph/graph_algo/svg/: svg.cpp  svg.hpp
